<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/internet"
            android:title="@string/menu_internet" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/oursite"
            android:title="@string/menu_OurSite" />
        <item
            android:id="@+id/nav_danielHome"
            android:icon="@drawable/homed"
            android:title="@string/menu_DanielHome" />
        <item
            android:id="@+id/nav_demyanaHome"
            android:icon="@drawable/homem"
            android:title="@string/menu_demyanaHome" />
        <item
            android:id="@+id/nav_byteEl3ela"
            android:icon="@drawable/homeb"
            android:title="@string/menu_byteEl3ela" />
    </group>
</menu>