<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="abkrino.eg.baytaleaala.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="abkrino.eg.baytaleaala.ui.internet.InternetFragment"
        android:label="@string/menu_internet"
        tools:layout="@layout/fragment_internet" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="abkrino.eg.baytaleaala.ui.ourSite.OurSiteFragment"
        android:label="@string/menu_OurSite"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_danielHome"
        android:name="abkrino.eg.baytaleaala.ui.danielHome.DanielHomeFragment"
        android:label="@string/menu_DanielHome"
        tools:layout="@layout/fragment_danielhome" />
    <fragment
        android:id="@+id/nav_demyanaHome"
        android:name="abkrino.eg.baytaleaala.ui.demyamaHome.DemyamaHomeFragment"
        android:label="@string/menu_demyanaHome"
        tools:layout="@layout/fragment_demyamahome" />
    <fragment
        android:id="@+id/nav_byteEl3ela"
        android:name="abkrino.eg.baytaleaala.ui.byteel3ela.ByteEl3elaFragment"
        android:label="@string/menu_byteEl3ela"
        tools:layout="@layout/fragment_byteel3ela" />
</navigation>